[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gallery-dl-proxy-backend"
version = "0.5.2"
description = "FastAPI job backend for gallery-dl with a native subscription proxy pool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "requests>=2.31",
  "curl-cffi>=0.13",
  "PySocks>=1.7.1",
  "PyYAML>=6.0",
  "filelock>=3.13",
  "websocket-client>=1.8",
]

[project.scripts]
gdl-backend = "gdl_backend.__main__:main"

[tool.setuptools.packages.find]
include = ["gdl_backend*"]

[tool.setuptools.package-data]
gdl_backend = ["webui/*.html", "webui/*.css", "webui/*.js"]
